# opuscord

./: .env.example  .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt
