[project]
name = "opuscord"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.12.0",
    "discord-py-self>=2.0.1",
    "httpx>=0.27.0",
    "numpy>=2.4.0",
    "python-dotenv>=1.2.1",
    "voyageai>=0.3.7",
]
